# wip

./: .gitattributes  .gitconfig  .gitignore  AGENTS.md  README.md  flake.nix  hs-mx.cabal  ln-home.sh
.codex/skills/nixos-install/: SKILL.md
app/: Main.hs
apps/: default.nix
dev-shell/: default.nix
etc/nixos/: boot.nix  configuration.nix  configuration.nix-full  configuration.nix-virtualbox  cp-root-to-home.sh  elm-custom.nix  emacs-configuration.nix  environment.nix  fileSystems.nix  fonts.nix  ghc-custom.nix  hardware-configuration.nix  hardware-configuration.nix-backup  hardware-configuration.nix-native  hardware.nix  i18n.nix  linux-5.1-rc4.nix  macbook.nix  networking.nix  nix.nix  nixpkgs.nix  overlay.nix  programs.nix  security.nix  services.nix  sound.nix  system.nix  systemd.nix  time.nix  users.nix  vbox-video-dri.nix  vim-configuration.nix  vim-configuration.nix~  virtualisation.nix  yi-custom.nix
etc/nixos/circuithub/: services.nix
etc/nixos/macbook/: boot.nix  configuration.nix  environment.nix  hardware.nix  networking.nix  powerManagement.nix  programs.nix  services.nix  systemd.nix
etc/nixos/macbookair2013/: boot.nix  configuration.nix  environment.nix  fileSystems.nix  networking.nix  nix.nix  nixpkgs.nix  services.nix  users.nix
etc/nixos/macbookpro/: configuration.nix  services.nix
etc/nixos/macbookpro115/: configuration.nix  powerManagement.nix  services.nix
etc/nixos/macbookpro11x/: apple-gmux.patch  boot.nix  configuration.nix  fileSystems.nix  hardware.nix  nixpkgs.nix  radeon-si-dpm.patch  services.nix  users.nix
etc/nixos/macbookpro2017/: configuration.nix  networking.nix
etc/nixos/modules/: actkbd-custom.nix  (+7 more)
home/me/: .bashrc  .emacs  .gitconfig  .gitignore_global  .inputrc  .nix-channels  .nviminfo  .pgclirc  .spacemacs  .vimrc  .vimrc.local
home/root/: .bashrc  .nix-channels
hs-mx/: README.md  flake.nix  hs-mx.cabal
hs-mx/src/HsMx/: Attach.hs  Cli.hs  Daemon.hs  Paths.hs
my-dev-shells/: README.md  flake.nix
my-nixos-configurations/: .sops.yaml  AGENTS.md  README.md  flake.nix
my-nixos-configurations/apps/: default.nix
my-nixos-configurations/dev-shell/: default.nix
my-nixos-configurations/overlays/: default.nix
my-nixos-configurations/secrets/: desktop2022.yaml
nixos-flake/: README.md  flake.nix
nixos-images/: flake.nix
nixos-profiles/: flake.nix
nixpkgs-shim/: README.md  flake.nix
nixpkgs-shim-images/: README.md
nixpkgs-shim-profiles/: README.md
sesh/: README.md  sesh.cabal
sesh/app/: Main.hs
sesh/src/HsMx/: Cli.hs  Paths.hs  Session.hs  Terminal.hs
sesh/src/Sesh/: Attach.hs  Cli.hs  Daemon.hs  Ipc.hs  Metadata.hs  Paths.hs  Session.hs  Terminal.hs
src/HsMx/: Cli.hs  Metadata.hs  Paths.hs  Session.hs  Terminal.hs
(+95 files in other folders)
